--- a/poe.ipynb
+++ b/poe.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "id": "842cade9",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "id": "1a5b3a3b",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
        "4  [It was many and many a year ago,,   In a king...        41  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "id": "38536826",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "4  It was many and many a year ago,\\n  In a kingd...        41  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "id": "34f9f21d",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "4  [PRON, AUX, ADJ, CCONJ, ADJ, DET, NOUN, ADV, P...  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "id": "686c5b22",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
        "4  [PRON, AUX, ADJ, CCONJ, ADJ, DET, NOUN, ADV, P...  4 - Annabel Lee.txt  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "id": "885e92e2",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        "4        41  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "id": "1e66b54a",
    "metadata": {},
    "outputs": [],
@@ -805,7 +805,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
