Cleaned up quotes, no longer using indices on Pandas structures, separators in filepaths no longer hardcoded.

--- a/poe.ipynb
+++ b/poe.ipynb
@@ -5,14 +5,14 @@
    "id": "90b8b2f4",
    "metadata": {},
    "source": [
-    "Before running this notebook, please make sure to install the required modules and Spacy's English language model. These can be found in the `requirements.txt` file and can be installed by using `pip install -r requirements.txt`.\n",
+    "Before running this notebook, please make sure to install the required Python libraries and spaCy's English language model. These can be found in the `requirements.txt` file and can be installed by using `pip install -r requirements.txt`. We recommend doing so inside a [Python virtual enviroment](https://www.w3schools.com/python/python_virtualenv.asp).\n",
     "\n",
-    "Once the required modules have been installed, import them and load Spacy's English language model, by running the cell below."
+    "Once the required libraries have been installed, import them by running the cell below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "842cade9",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,7 @@
     "import requests\n",
     "import spacy\n",
     "from pathlib import Path\n",
-    "from spacy.symbols import NORM, ORTH\n",
-    "nlp = en_core_web_sm.load()"
+    "from spacy.symbols import NORM, ORTH"
    ]
   },
   {
@@ -31,12 +30,12 @@
    "id": "653d7a81",
    "metadata": {},
    "source": [
-    " Retrieve poems using the PoetryDB API. For this assignment, we're only looking at poems by Edgar Allan Poe."
+    " We start by retrieving poems using the PoetryDB API. For this assignment, we are only looking at poems by Edgar Allan Poe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "1a5b3a3b",
    "metadata": {},
    "outputs": [
@@ -123,7 +122,7 @@
        "4  [It was many and many a year ago,,   In a king...        41  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,12 +144,12 @@
    "id": "9a8af937",
    "metadata": {},
    "source": [
-    "Before we continue, we rename the `lines` column to `document` and convert its content (lists of strings) to a strings"
+    "Before we continue, we rename the `lines` column to `document` and combine the lines it contains to a single string, separated by newline characters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "38536826",
    "metadata": {},
    "outputs": [
@@ -237,13 +236,13 @@
        "4  It was many and many a year ago,\\n  In a kingd...        41  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "poem_df.rename(columns={\"lines\": \"document\"}, inplace=True)\n",
+    "poem_df.rename(columns={'lines': 'document'}, inplace=True)\n",
     "poem_df['document'] = poem_df['document'].str.join('\\n')\n",
     "poem_df.head()"
    ]
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "34f9f21d",
    "metadata": {},
    "outputs": [
@@ -397,22 +396,29 @@
        "4  [PRON, AUX, ADJ, CCONJ, ADJ, DET, NOUN, ADV, P...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def add_linguistic_features(documents: pd.Series) -> tuple[pd.Series, pd.Series, pd.Series, pd.Series]:\n",
+    "# load spaCy's English model\n",
+    "nlp = en_core_web_sm.load()\n",
+    "# Add special tokenization cases\n",
+    "special_cases = [(\"'tis\", [{ORTH: \"'t\", NORM: \"it\"}, {ORTH: \"is\"}]),\n",
+    "                    (\"'Tis\", [{ORTH: \"'T\", NORM: \"It\"}, {ORTH: \"is\"}])]\n",
+    "for special_str, special_attr in special_cases:\n",
+    "    nlp.tokenizer.add_special_case(special_str, special_attr)\n",
+    "\n",
+    "\n",
+    "def add_linguistic_features(documents: pd.Series, nlp: spacy.language.Language\n",
+    "                            ) -> tuple[pd.Series, pd.Series, pd.Series, pd.Series]:\n",
     "    texts = []\n",
     "    tokens = []\n",
     "    lemmas = []\n",
     "    pos = []\n",
     "\n",
-    "    for index, document in documents.items():\n",
-    "        tokens.append([])\n",
-    "        lemmas.append([])\n",
-    "        pos.append([])\n",
+    "    for document in documents:\n",
     "        # adding spaces around double dashes to prevent tokenization issues\n",
     "        text = document.replace('--', ' -- ')\n",
     "        # remove underscores used for emphasis\n",
@@ -420,20 +426,31 @@
     "        # save pre-processed document\n",
     "        texts.append(text)\n",
     "\n",
-    "        # Add special tokenization cases\n",
-    "        special_cases = [(\"'tis\", [{ORTH: \"'t\", NORM: \"it\"}, {ORTH: \"is\"}]),\n",
-    "                         (\"'Tis\", [{ORTH: \"'T\", NORM: \"It\"}, {ORTH: \"is\"}])]\n",
-    "        for special_str, special_attr in special_cases:\n",
-    "            nlp.tokenizer.add_special_case(special_str, special_attr)\n",
+    "        # apply spaCy's NLP model to the document\n",
+    "        nlp_tokens = nlp(text)\n",
+    "\n",
+    "        doc_tokens = []\n",
+    "        doc_lemmas = []\n",
+    "        doc_pos = []\n",
     "\n",
     "        for token in nlp(text):\n",
-    "            tokens[index].append(token.text)\n",
-    "            lemmas[index].append(token.lemma_)\n",
-    "            pos[index].append(token.pos_)\n",
+    "            doc_tokens.append(token.text)\n",
+    "            doc_lemmas.append(token.lemma_)\n",
+    "            doc_pos.append(token.pos_)\n",
     "\n",
-    "    return pd.Series(texts), pd.Series(tokens), pd.Series(lemmas), pd.Series(pos)\n",
+    "        tokens.append(doc_tokens)\n",
+    "        lemmas.append(doc_lemmas)\n",
+    "        pos.append(doc_pos)\n",
     "\n",
-    "poem_df['text'], poem_df['tokens'], poem_df['lemmas'], poem_df['parts-of-speech'] = add_linguistic_features(poem_df['document'])\n",
+    "    return (\n",
+    "        pd.Series(texts, index=documents.index),\n",
+    "        pd.Series(tokens, index=documents.index),\n",
+    "        pd.Series(lemmas, index=documents.index),\n",
+    "        pd.Series(pos, index=documents.index)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "poem_df['text'], poem_df['tokens'], poem_df['lemmas'], poem_df['parts-of-speech'] = add_linguistic_features(poem_df['document'], nlp)\n",
     "poem_df.head()"
    ]
   },
@@ -447,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "686c5b22",
    "metadata": {},
    "outputs": [
@@ -592,24 +609,29 @@
        "4  [PRON, AUX, ADJ, CCONJ, ADJ, DET, NOUN, ADV, P...  4 - Annabel Lee.txt  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# save documents\n",
-    "filenames = []\n",
+    "# create a directory for each author in the dataframe\n",
+    "for author in poem_df['author'].unique():\n",
+    "    author_dir = Path('data') / Path(author)\n",
+    "    author_dir.mkdir(exist_ok=True, parents=True)\n",
+    "\n",
+    "# save each poem in the directory of the respective author\n",
+    "file_names = []\n",
     "for i, poem in poem_df.iterrows():\n",
-    "    Path(f'data/{poem['author']}').mkdir(exist_ok=True, parents=True)\n",
-    "    filename = f'{i} - {poem['title']}.txt'\n",
-    "    with open(f\"data/{poem['author']}/{filename}\", \"w\") as f:\n",
-    "        f.write(poem['document'])\n",
-    "    filenames.append(filename)\n",
+    "    file_name = f\"{i} - {poem['title']}.txt\"\n",
+    "    file_path = Path('data') / Path(poem['author']) / Path(file_name)\n",
+    "\n",
+    "    file_path.write_text(poem['document'], encoding='utf-8')\n",
+    "    file_names.append(file_name)\n",
     "\n",
     "# add filenames to dataframe\n",
-    "poem_df['filename'] = pd.Series(filenames)\n",
-    "poem_df.head()\n"
+    "poem_df['filename'] = pd.Series(file_names)\n",
+    "poem_df.head()"
    ]
   },
   {
@@ -622,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "885e92e2",
    "metadata": {},
    "outputs": [
@@ -774,7 +796,7 @@
        "4        41  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "1e66b54a",
    "metadata": {},
    "outputs": [],
